objects/Recording__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Recordings</relationshipLabel>
        <relationshipName>Recordings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disclosure_Agreement_Location__c</fullName>
        <description>Disclosure agreement recording location.</description>
        <label>Disclosure Agreement Location</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disclosure_Agreement__c</fullName>
        <label>Disclosure Agreement</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dropbox_URL_CHECK__c</fullName>
        <description>This field should not be visible and is being used to prevent duplicate Dropbox URLs.</description>
        <label>Dropbox URL CHECK</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Dropbox_URL__c</fullName>
        <description>The primary Dropbox storage location for Recordings. Privileges must be granted in Dropbox to access.</description>
        <label>Dropbox URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Includes_Application__c</fullName>
        <label>Includes Application</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Primary Member</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recordings</relationshipLabel>
        <relationshipName>Recordings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Recording_Date__c</fullName>
        <description>The date and time the recording was made.</description>
        <label>Recording Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Recording_Source__c</fullName>
        <label>Recording Source</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RingCentral</fullName>
                </value>
                <value>
                    <fullName>Verification</fullName>
                </value>
                <value>
                    <fullName>Vicidial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>S3_URL_CHECK__c</fullName>
        <description>This should not be visible and is being used to prevent duplicate S3 URLs.</description>
        <label>S3 URL CHECK</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>S3_URL__c</fullName>
        <description>The URL to the redundant S3 storage bucket. S3 privileges are required to access the recording.</description>
        <label>S3 URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Terms_Agreement_Location__c</fullName>
        <description>Terms agreement recording location.</description>
        <label>Terms Agreement Location</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_Agreement__c</fullName>
        <label>Terms Agreement</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twilio_URL_CHECK__c</fullName>
        <label>Twilio URL CHECK</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Twilio_URL__c</fullName>
        <label>Twilio URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Verification_Duration__c</fullName>
        <label>Verification Duration</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verification_Type__c</fullName>
        <label>Verification Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Catastrophic</fullName>
                </value>
                <value>
                    <fullName>Classic</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Summit</fullName>
                </value>
                <value>
                    <fullName>Thrive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Recording</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{000000000}</displayFormat>
        <label>Recording Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recordings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>